2.2.4/_sources/gallery/subplots_axes_and_figures/multiple_figs_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_multiple_figs_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_multiple_figs_demo.py:


==================
Multiple Figs Demo
==================

Working with multiple figure windows and subplots



.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np

    t = np.arange(0.0, 2.0, 0.01)
    s1 = np.sin(2*np.pi*t)
    s2 = np.sin(4*np.pi*t)







Create figure 1



.. code-block:: python


    plt.figure(1)
    plt.subplot(211)
    plt.plot(t, s1)
    plt.subplot(212)
    plt.plot(t, 2*s1)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_001.png
    :class: sphx-glr-single-img




Create figure 2



.. code-block:: python


    plt.figure(2)
    plt.plot(t, s2)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_003.png
    :class: sphx-glr-single-img




Now switch back to figure 1 and make some changes



.. code-block:: python


    plt.figure(1)
    plt.subplot(211)
    plt.plot(t, s2, 's')
    ax = plt.gca()
    ax.set_xticklabels([])

    plt.show()



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_003.png
    :class: sphx-glr-single-img





.. _sphx_glr_download_gallery_subplots_axes_and_figures_multiple_figs_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: multiple_figs_demo.py <multiple_figs_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: multiple_figs_demo.ipynb <multiple_figs_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
